--- a/.dockerignore
+++ b/.dockerignore
@@ -4,8 +4,6 @@
 
 mysql_data
 
-.env
-
 docker-compose.override.yml
 
 mysql-conf.d/
@@ -21,3 +19,32 @@ build/
 .gitignore
 
 .vscode/
+
+**/.classpath
+**/.dockerignore
+**/.env
+**/.git
+**/.gitignore
+**/.project
+**/.settings
+**/.toolstarget
+**/.vs
+**/.vscode
+**/*.*proj.user
+**/*.dbmdl
+**/*.jfm
+**/azds.yaml
+**/bin
+**/charts
+**/docker-compose*
+**/Dockerfile*
+**/obj
+**/secrets.dev.yaml
+**/values.dev.yaml
+LICENSE
+README.md
+!**/.gitignore
+!.git/HEAD
+!.git/config
+!.git/packed-refs
+!.git/refs/heads/**
