--- a/src/CashFlow.API/appsettings.Development.json
+++ b/src/CashFlow.API/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "Connection": "Server=localhost;Port=3308;Database=cashflowdb;Uid=root;Pwd=1234;"
+    "Connection": "Server=mysql_container;Database=cashflowdb;User=root;Password=1234;"
   }
 }
