--- a/src/CashFlow.API/appsettings.Development.json
+++ b/src/CashFlow.API/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "Connection": "Server=mysql_container;Database=cashflowdb;User=root;Password=1234;"
+    "Connection": "Server=mysql_container_unique_name;Port=3306;Database=cashflowdb;User=richard;Password=1234;"
   }
 }
