--- a/.dockerignore
+++ b/.dockerignore
@@ -1,25 +1,3 @@
-*.log
-
-*.tmp
-
-mysql_data
-
-docker-compose.override.yml
-
-mysql-conf.d/
-
-dist/
-build/
-
-*.swp
-*.bak
-*.old
-
-.git
-.gitignore
-
-.vscode/
-
 **/.classpath
 **/.dockerignore
 **/.env
@@ -38,6 +16,8 @@ build/
 **/charts
 **/docker-compose*
 **/Dockerfile*
+**/node_modules
+**/npm-debug.log
 **/obj
 **/secrets.dev.yaml
 **/values.dev.yaml
