--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,22 @@
 services:
+  cashflow.api:
+    build:
+      context: .
+      dockerfile: src/CashFlow.API/Dockerfile
+    networks:
+      - app_network
+    depends_on:
+      mysqldb:
+        condition: service_healthy
+
   mysqldb:
     image: mysql:8.0
-    container_name: mysql_container
+    container_name: mysql_container_unique_name
     restart: always
     ports:
       - 3308:3306
     env_file:
-      - .env
-
+      - ./.env
     volumes:
       - mysql_data:/var/lib/mysql
     healthcheck:
@@ -15,6 +24,12 @@ services:
       interval: 5s
       timeout: 5s
       retries: 3
+    networks:
+      - app_network
+
+networks:
+  app_network:
+    driver: bridge
 
 volumes:
   mysql_data:
