feat: add authorize jwt

--- a/src/CashFlow.API/appsettings.Development.json
+++ b/src/CashFlow.API/appsettings.Development.json
@@ -1,5 +1,11 @@
 {
   "ConnectionStrings": {
     "Connection": "Server=mysql_container_unique_name;Port=3306;Database=cashflowdb;User=richard;Password=1234;"
+  },
+  "Settings": {
+    "Jwt": {
+      "SigningKey": "YV6hRj@4@r!p$-Ac#@A{}m#2L,&@2bNj",
+      "ExpiresMinutes": 1000
+    }
   }
 }
