--- a/launchSettings.json
+++ b/launchSettings.json
@@ -7,5 +7,6 @@
         "cashflow.api": "StartDebugging"
       }
     }
-  }
+  },
+  "applicationUrl": "http://localhost:8080;https://localhost:8081"
 }
